--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,58 @@
-main {
-  text-align: center;
-  vertical-align: center;
-  line-height: 100vh
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  scroll-behavior:smooth;
+}
+main{
+  background-color:#F28AB2;
+  height:100vh;
+  width:100vw;
+  display:grid;
+  place-items:center;
+}
+.container{
+  height:400px;
+  width:300px;
+  background:white;
+  border-radius:7px;
+  padding:23px;
+  font-family:sans-serif;
+}
+.item{
+  display:flex;
+  margin:10px 0;
+  align-items:center;
+}
+.item img{
+  border-radius:50%;
+  margin:0 13px 0 0;
+  height:40px;
+  width:40px;
+}
+.item p:nth-child(1){
+font-size:18px;
+  letter-spacing:0.3px;
+}
+.item p:nth-child(2){
+  color:#786d6d;
+}
+.btncontainer{
+  display:flex;
+  justify-content:center;
+  margin:18px 0 0 0;
+}
+.view-btn{
+  background: rgb(186,87,130);
+  background: linear-gradient(90deg, rgba(186,87,130,1) 21%, rgba(235,93,147,1) 100%, rgba(252,0,255,1) 100%);
+  padding:13px;
+  border:none;
+  width:90%;
+  border-radius:5px;
+  font-family:sans-serif;
+  font-size:16px;
+  color:White;
+  font-weight:bolder;
+  letter-spacing:0.5px;
+  cursor:pointer;
 }
