--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@ main{
   display:grid;
   place-items:center;
 }
+.wrapper{
+  height:460px;
+  width:300px;
+  position:relative;
+}
 .container{
   height:400px;
   width:300px;
@@ -18,6 +23,8 @@ main{
   border-radius:7px;
   padding:23px;
   font-family:sans-serif;
+  overflow-y:auto;
+  margin-bottom:20px;
 }
 .item{
   display:flex;
@@ -55,4 +62,22 @@ font-size:18px;
   font-weight:bolder;
   letter-spacing:0.5px;
   cursor:pointer;
+  position:absolute;
+  bottom:10px;
+}
+.clear-btn{
+    background: rgb(186,87,130);
+  background: linear-gradient(90deg, rgba(186,87,130,1) 21%, rgba(235,93,147,1) 100%, rgba(252,0,255,1) 100%);
+  padding:13px;
+  border:none;
+  width:90%;
+  border-radius:5px;
+  font-family:sans-serif;
+  font-size:16px;
+  color:White;
+  font-weight:bolder;
+  letter-spacing:0.5px;
+  cursor:pointer;
+  position:absolute;
+  bottom:-37px;
 }
